--- a/mysite/HTML/Lab2/file1.html
+++ b/mysite/HTML/Lab2/file1.html
@@ -1,48 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-        <meta charset="UTF-8">
-    <title>file1</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 <body>
-        <center>
-                <table border="1" width="240" height="100" cellspacing="0">
-             <tr>
-                <td colspan="2"> ячейка1</td>
-                <td height="30"> ячейка2</td>
-             </tr>
-             <tr>
-                <td rowspan="2" width="100"> ячейка2</td>
-                <td>ячейка3</td>
-                <td>ячейка4</td>
-             </tr>
-             <tr>
-                <td>ячейка5</td>
-                <td>ячейка6</td>
-              </tr>
-                </table>
-        </center>
-        <center>
-                <table border="1" width="240" height="100" cellspacing="0">
-            <tr>
-                    <td colspan="5" height="30"><center>ячейка1</center></td>
-            </tr>
-              <td>ячейка1</td>
-              <td rowspan="2" width="200">ячейка2</td>
-              <td>ячейка3</td>
-            <tr>
-              <td>ячейка4</td>
-              <td>ячейка5</td>
-            </tr>
-         <center>
-                <table border="1" width="240" height="100" cellspacing="0">
-            <tr>
-                <td rowspan="3">ячейка1</td>
-                <td>ячейка2</td>
-                <td>ячейка3</td>
-                <td>ячейка4</td>
-                <td rowspan="3">ячейка5</td>
-                </tr>
-            </center>
-                </body>
-                </html>
+    <table ellspacing="2" border="1" cellspacing="0"    cellpadding="4">
+        <tr>
+            <td colspan="2">ячейка 1</td>
+            <td>ячейка 3</td>
+        </tr>
+        <tr>
+            <td rowspan="2">ячейка 4</td>
+            <td>ячейка 5</td>
+            <td>ячейка 6</td>
+        </tr>
+        <tr>
+            <td>ячейка 8 </td>
+            <td>ячейка 9</td>
+        </tr>
+    </table>
+<br>
+<br>
+<br>
+<br>
+    <table ellspacing="2" border="1" cellspacing="0"    cellpadding="4">
+        <tr>
+            <td colspan="3">ячейка 1</td>
+        </tr>
+        <tr>
+            <td>ячейка 4</td>
+            <td rowspan="2">ячейка 5</td>
+            <td>ячейка 6</td>
+        </tr>
+        <tr>
+            <td>ячейка 8</td>
+            <td>ячейка 9</td>
+        </tr>
+    </table>
+<br>
+<br>
+<br>
+<br>
+    <table ellspacing="2" border="1" cellspacing="0"    cellpadding="4">
+        <tr>
+            <td rowspan="3">ячейка 1</td>
+            <td>ячейка 2</td>
+            <td rowspan="3">ячейка 3</td>
+        </tr>
+        <tr>
+            <td>ячейка 5</td>
+        </tr>
+        <tr>
+            <td>ячейка 8</td>
+        </tr>
+    </table>
+
+    
+</body>
+</html>
