--- a/mysite/HTML/Lab2/file2.html
+++ b/mysite/HTML/Lab2/file2.html
@@ -2,7 +2,8 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>Обязательное поле</title>
+  <title>Форма</title>
+  <table widht="400" align="center"></table>
  </head>
  <body>
     <form method=”post” action="index.html">
@@ -17,7 +18,7 @@
     </hr>
  </form>
  <form>
-     <p>Ваш город</dr></p>
+     <label for="count_s">Ваш город</label><br/>
      <select name="Kyiv" size="3" multiple="multiple">
         <option value="disabled">Выберете город</option>
         <option value="Kyiv"> Киев</option>
