--- a/mysite/HTML/Lab1/index.html
+++ b/mysite/HTML/Lab1/index.html
@@ -35,10 +35,10 @@
     </strong>next work</p>
      <a href="www.google.com"> <img src=https://png.pngtree.com/element_origin_min_pic/16/05/16/205739ba060e909.jpg
     alt="lake" width="200"/> </a>
-    <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWtmpMgG0DptXV96UhzqGc3Qf9q7xdCgnBDyDGUe0X3Sv4LAq5><br>
-    <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwHv6j0dt5Q3ZC9idBT5y6bfXIPWqKceL8SpN2MyCtGjiNYMgZIg><br>
-    <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLGCuUiFTncdkU3lDE_9hm7gltJB5XGHKz_5NNHKidMU_TRxK5><br></div>
-    <iframe src=https://www.wonderplugin.com/wordpress-lightbox/><iframe/>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWtmpMgG0DptXV96UhzqGc3Qf9q7xdCgnBDyDGUe0X3Sv4LAq5"><br>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwHv6j0dt5Q3ZC9idBT5y6bfXIPWqKceL8SpN2MyCtGjiNYMgZIg"><br>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLGCuUiFTncdkU3lDE_9hm7gltJB5XGHKz_5NNHKidMU_TRxK5"><br></div>
+    <iframe src="https://www.wonderplugin.com/wordpress-lightbox"></iframe>
 
 </body>
 </html>
