--- a/mysite/HTML/laba_1_3_5/index.html
+++ b/mysite/HTML/laba_1_3_5/index.html
@@ -15,6 +15,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto in nisi vero omnis asperiores blanditiis commodi alias, id accusantium laborum et quibusdam, harum eveniet voluptas doloribus expedita eos sed. Ad?</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio tenetur quod modi doloremque, voluptatibus eum magni soluta. Enim cum, odit, vero, quidem omnis asperiores assumenda officia odio voluptate ipsam aspernatur.</p>      
             </div>
+    </div>
     <div class="main_container">
         <div class="block">
             <a href="https://www.google.ru">
