--- a/mysite/HTML/laba_1_4/index.html
+++ b/mysite/HTML/laba_1_4/index.html
@@ -3,15 +3,41 @@
 <head>
   <meta charset="utf-8">
   <title>Big Laba</title>
-  <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="./style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
 <div class="conteiner">
   <header>
-    <img src="./images/islomal.png" alt="logo" width="100px">
-    <button>Login</button>
+    <a href="#"><img src="./images/islomal.png" alt="logo" width="100px"></a>
+    <input type="checkbox" id="click">
+    <div class="dark"></div>
+    <div class="sidemenu">
+      <label for="click" class="cls">Close</label>
+      <nav>
+      <ul>
+        <li><a href="#1">Main</a></li>
+        <li><a href="#2">Blog</a></li>
+        <li><a href="#3">Services</a></li>
+        <li><a href="#4">Photo</a></li>
+        <li><a href="#5">Contacts</a></li>
+      </ul>
+      </nav> 
+      <div class="in">Sing In</div>
+      <button class="log">Login</button>
+      <div class="bot">
+        <div class="social">
+          <a href="facebook.com" target="_blank"></a>
+          <a href="instagram.com" target="_blank"></a>
+          <a href="twitter.com" target="_blank"></a>
+        </div>
+        <p>Subscribe to our social networks and get newest info about!</p>
+      </div>
+    </div>
+    <label for="click" class="burger">
+      <img src="./images/burger.png" alt="burger">
+    </label>
   </header>
   <div class="content">
     <aside>
@@ -55,7 +81,7 @@
     </div>
   </div>
   <footer>
-    <img src="./images/stickeroid.png" alt="logo">
+    <a href="#"><img src="./images/stickeroid.png" alt="logo"></a>
   </footer>
 </div>
 
